# VideoTexture

./: .gitignore  CMakeLists.txt  VideoTexture.sln  readme.md
VideoTexture/: VideoTexture.vcxproj  VideoTexture.vcxproj.filters  main.cpp
VideoTexture/src/: VideoTexture.cpp  VideoTexture.hpp
